2022-10-15  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/dece.cpp: updated
	new version 1.2.6 Garnet, maintenance release

2022-10-14  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/decemod6.cpp (DeceBoundCorrect): bug fixed
	boundcorrect bug fixed by HI Kim of KAERI

	* source/kalbach.h: new file
	* source/kalbach.cpp: new file
	calculate Kalbach systematics for MF6/LAW=1,LANG=2
	cms/lab conversion is not so exact

	* source/decetable6.cpp (DeceTableMF6Law1Lang1): new function
	(DeceTableMF6Law1Lang2): new function
	MF6 LAW=1 case was divided into LANG=1 and 2 cases

	* source/deceoperation.cpp (DeceOutputRedirectFile): updated
	when Output option is given, an existing file will be overwritten by DeCE output,
	then subsequent output will be appended

2022-10-12  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/kalbach.h: new file
	* source/kalbach.cpp: new file
	calculate K-M systematics for LAW=1 and LANG=2

2022-09-15  KAWANO Toshihiko  <kawano@lanl.gov>

	* tools/decemf15.cpp: new file
	DeCE tool for making MF12 and MF15 for fission gamma production

2022-03-20  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/decemod6.cpp (DeceBoundCorrect): updated
	boundcorrect didn't work when TAB1 and LIST in MF6 have different energy boundaries,
	which is probably not allowed

2022-03-17  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/deceangdist.cpp (readADdata): updated
	* source/deceread.cpp (readCSdata) (readISdata): updated
	skip data reading when data ofset is not determined automatically

2022-03-08  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/deceprocgroup.cpp (DeceGroupAverage): updated
	check if MF/MT=1/452 is given by polynomials, then skip processing

2021-07-27  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/decetable1.cpp (DeceTableMF1MT460): new function
	print delayed photon data

2021-07-19  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/endflib.cpp (ENDFScanLibrary): modified
	* source/deceheader.cpp (DeceShowHeaders): modified