@@ -27,7 +27,7 @@ void   DeceCalc452      (ENDFDict *, ENDF **);
 void   DeceDelete       (ENDFDict *, const int, const int);
 
 /*** deceread.cpp */
-void   DeceRead         (ENDFDict *, ENDF *, const int, const int, char *, int, bool);
+void   DeceRead         (ENDFDict *, ENDF *, const int, const int, char *, const int, const int);
 
 /*** deceangdist.cpp */
 void   DeceAngdist      (ENDFDict *, ENDF **, const int, const int, char *, int);
